--- a/src/style/colors.scss
+++ b/src/style/colors.scss
@@ -1,11 +1,13 @@
 :root {
-  --primary: #1565d8;
-  --surfaces-default: #ffffff;
-  --text-default: #000000;
-  --text-secondary: #8692a6;
+  --primary: var(--p-primary-color, #1565d8);
+  --surfaces-default: var(--p-surface-0, #ffffff);
+  --text-default: var(--p-text-color, #000000);
+  --text-secondary: var(--p-text-muted-color, #8692a6);
   --surface-secondary: #f5f9ff;
   --surface-light-grey: #bdbdbd;
   --p-divider-border-color: #f5f5f5;
   --surface-grey: #62618f;
-  --border: #dadde1;
+  --border: var(--p-content-border-color, #dadde1);
+
+  --p-primary-color: #1565d8;
 }
